--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Projects</a></li>
-                    <li><a href="about.html">Our Studio</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <!-- <li class="active"><a href="index.html">Projects</a></li> -->
+                    <li><a href="about.html">About</a></li>
+                    <!-- <li><a href="blog.html">Blog</a></li> -->
+                    <!-- <li><a href="contact.html">Contact</a></li> -->
                </ul>
           </div>
 
@@ -203,7 +203,7 @@
                          <li><a href="#" class="fa fa-linkedin"></a></li>
                     </ul>
                </div>
-               
+
           </div>
      </div>
 </footer>
